Creación varias vistas - Creación barra navegacion - Creación footer

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,39 @@
+/* Font 
+----------------------------------------------------------------------------------------*/
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+
+/* Icon
+----------------------------------------------------------------------------------------*/
+.is-24{
+    height: 24px;
+    width: 24px;
+}
+
+
+/* Height 
+----------------------------------------------------------------------------------------*/
+.h-6r{
+    height: 6rem;
+}
+
+.vh-25{
+    height: 25vh;
+}
+
+.vh-50{
+    height: 50vh;
+}
+
+.vh-75{
+    height: 75vh;
+}
+
+
+/* Margin
+----------------------------------------------------------------------------------------*/
+.mt-6{
+    margin-top: 6rem;
 }
