--- a/src/views/web/about.ejs
+++ b/src/views/web/about.ejs
@@ -6,9 +6,9 @@
         <%- include("../partials/nav.ejs") %>
         
         <div class="container mt-6">
-            <div class="row vh-50">
-                <div class="col m-auto">
-                    <p class="text-red text-center h2">"La felicidad queda en la capacidad de disfrutar con menos, y no en buscar más." - Sócrates</p>
+            <div class="row">
+                <div class="col p-4">
+                    <p class="text-red text-center h1">Sobre mí</p>
                 </div>
             </div>
         </div>
