Modificación de vistas. Creación de nuevas secciones.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,11 @@ body {
     width: 24px;
 }
 
+.is-72{
+    height: 72px;
+    width: 72px;
+}
+
 
 /* Height 
 ----------------------------------------------------------------------------------------*/
