--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -10,16 +10,16 @@
                 <a class="nav-link text-grey" href="/about">Sobre mí</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.instagram.com/fernando.fleck/" role="button" aria-pressed="true" title="Instagram"><img src="./icon/instagram.svg" class="is-24" alt="Instagram"></a>
+                <a class="nav-link" href="https://www.instagram.com/fernando.fleck/" role="button" aria-pressed="true" title="Instagram"><img src="/icon/instagram.svg" class="is-24" alt="Instagram"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://twitter.com/fernafleck" role="button" aria-pressed="true" title="Twitter"><img src="./icon/twitter.svg" class="is-24" alt="Twitter"></a>
+                <a class="nav-link" href="https://twitter.com/fernafleck" role="button" aria-pressed="true" title="Twitter"><img src="/icon/twitter.svg" class="is-24" alt="Twitter"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/fernandofleck" role="button" aria-pressed="true" title="GitHub"><img src="./icon/github.svg" class="is-24" alt="GitHub"></a>
+                <a class="nav-link" href="https://github.com/fernandofleck" role="button" aria-pressed="true" title="GitHub"><img src="/icon/github.svg" class="is-24" alt="GitHub"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="mailto:fernafleck@gmail.com" role="button" aria-pressed="true" title="Gmail"><img src="./icon/mail.svg" class="is-24" alt="Gmail"></a>
+                <a class="nav-link" href="mailto:fernafleck@gmail.com" role="button" aria-pressed="true" title="Gmail"><img src="/icon/mail.svg" class="is-24" alt="Gmail"></a>
             </li>
         </ul>
     </div>
