--- a/src/views/web/index.ejs
+++ b/src/views/web/index.ejs
@@ -11,6 +11,17 @@
                     <p class="text-red text-center h2">"La felicidad queda en la capacidad de disfrutar con menos, y no en buscar más." - Sócrates</p>
                 </div>
             </div>
+
+            <% for( let j = 0; j < images.length; j++ ) { %>
+                <div class="card bg-dark text-white">
+                    <img src="/images/index/<%= images[j].img %>" class="card-img" alt="<%= images[j].name %>">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                  </div>
+            <% } %>
         </div>
 
         <!-- Footer -->
