--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,11 +17,20 @@ body {
     width: 72px;
 }
 
+.is-3{
+    height: 3rem;
+    width: 3rem;
+}
+
 
 /* Height 
 ----------------------------------------------------------------------------------------*/
 .h-6r{
     height: 6rem;
+}
+
+.h-60{
+    height: 70%;
 }
 
 .vh-25{
@@ -36,9 +45,51 @@ body {
     height: 75vh;
 }
 
+/* Width 
+----------------------------------------------------------------------------------------*/
+.vw-25{
+    width: 25vw;
+}
+
+.vw-50{
+    width: 50vw;
+}
+
+.vw-75{
+    width: 75vw;
+}
+
 
 /* Margin
 ----------------------------------------------------------------------------------------*/
 .mt-6{
     margin-top: 6rem;
+}
+
+
+/* Nav
+----------------------------------------------------------------------------------------*/
+#navBar{
+    transition: 0.4s;
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
+/* Highlight
+----------------------------------------------------------------------------------------*/
+.highlight{
+    z-index: 1100;
+}
+
+.highlight:hover{
+    background-color: rgba(255, 255, 255, 0.25);
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 1);
+    outline:rgba(255, 180, 31, 0.8) solid 0.25rem;
+    transform: translateY(-5px);
+    transition: 0.4s;
+}
+
+/* Z-Index
+----------------------------------------------------------------------------------------*/
+.zi-1000{
+    z-index: 1000;
 }
