Vista de frases y creación de frases

--- a/src/views/admins/super.ejs
+++ b/src/views/admins/super.ejs
@@ -6,6 +6,8 @@
         <%- include("../partials/nav.ejs") %>
         
         <div class="container mt-6">
+
+            <!-- Inicio Container -->
             <div class="row">
                 <div class="col p-4">
                     <p class="text-red text-center h1">Superpoderes Web</p>
@@ -23,7 +25,19 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <img src="./icon/file-text.svg" class="card-img-top is-72 mx-auto" alt="...">
+                        <div class="card-body text-center">
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/phrases" role="text">Sumar Frases</a>
+                            <p class="card-text text-grey">Sumar y borrar frases de la pantalla principal.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <!-- Fin Container -->
         </div>
 
         <!-- Footer -->
