--- a/public/stylesheets/styleColors.css
+++ b/public/stylesheets/styleColors.css
@@ -62,6 +62,15 @@ input:focus:focus-within {
 }
 
 
+/* Textarea 
+----------------------------------------------------------------------------------------*/
+textarea:focus:focus-within {
+  outline:rgba(255, 180, 31, 0.8) solid 0.25rem;
+  border: rgba(255, 180, 31, 0.5) solid 0.1rem;
+  transition: 1s;
+}
+
+
 /* Button 
 ----------------------------------------------------------------------------------------*/
 button:focus:focus-within {
