--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="grey">
-    <ul class="nav justify-content-center">
+<footer class="grey h-6r d-flex align-items-center justify-content-center">
+    <ul class="nav">
         <li class="nav-item">
             <a class="nav-link text-yellow redLink" href="/legal">Aviso Legal | Políticas de Privacidad | Políticas de Cookies</a>
         </li>
