Carga de archivos

--- a/src/views/admins/phrases.ejs
+++ b/src/views/admins/phrases.ejs
@@ -20,26 +20,26 @@
                     <div class="row mb-3 mx-0 input-group">
                         <label class="col-2 col-lg-1 col-form-label">Frase</label>
                         <div class="col-10 col-lg-11 p-0">
-                            <textarea class="form-control" rows="2" name="phrase" required></textarea>
+                            <textarea class="form-control shadow" rows="2" name="phrase" required></textarea>
                         </div>
                     </div>
                     <div class="row mb-3 mx-0 input-group">
                         <label class="col-2 col-lg-1 col-form-label">Autor</label>
                         <div class="col-10 col-lg-11 p-0">
-                            <input name="autor" type="text" class="form-control" required>
+                            <input name="autor" type="text" class="form-control shadow" required>
                         </div>
                     </div>
                     <div class="row mb-3 mx-0 input-group">
                         <label class="col-2 col-lg-1 col-form-label">Fuente</label>
                         <div class="col-10 col-lg-11 p-0">
-                            <input name="bookOrPage" type="text" class="form-control">
+                            <input name="bookOrPage" type="text" class="form-control shadow">
                         </div>
                     </div>
                     
                     <div class="mb-3 btn-group ms-auto">
-                        <a class="btn btn-dark is-3" href="/super" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="position-absolute top-50 start-50 translate-middle" alt="Volver"></a>
-                        <button type="reset" class="btn btn-dark is-3" title="Borrar"><img src="/icon/wind.svg" class="position-absolute top-50 start-50 translate-middle" alt="Borrar"></button>
-                        <button type="submit" class="btn btn-dark is-3" title="Guardar"><img src="/icon/save.svg" class="position-absolute top-50 start-50 translate-middle" alt="Guardar"></button>
+                        <a class="btn btn-light shadow is-3" href="/super" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="position-absolute top-50 start-50 translate-middle" alt="Volver"></a>
+                        <button type="reset" class="btn btn-light shadow is-3" title="Borrar"><img src="/icon/wind.svg" class="position-absolute top-50 start-50 translate-middle" alt="Borrar"></button>
+                        <button type="submit" class="btn btn-light shadow is-3" title="Guardar"><img src="/icon/save.svg" class="position-absolute top-50 start-50 translate-middle" alt="Guardar"></button>
                     </div>
     
                 </form>
