--- a/src/views/admins/super.ejs
+++ b/src/views/admins/super.ejs
@@ -35,6 +35,16 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <img src="./icon/archive.svg" class="card-img-top is-72 mx-auto" alt="...">
+                        <div class="card-body text-center">
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/files" role="text">Cargar Archivos</a>
+                            <p class="card-text text-grey">Cargar y borrar archivos de la base de datos.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Fin Container -->
