Carga de archivos y secciones

--- a/src/views/admins/files.ejs
+++ b/src/views/admins/files.ejs
@@ -36,7 +36,7 @@
                     
                     
                     <div class="mb-3 btn-group ms-auto">
-                        <a class="btn btn-light shadow alt3rem" href="/super" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="color-light" alt="Volver"></a>
+                        <a class="btn btn-light shadow alt3rem" href="/super/view" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="color-light" alt="Volver"></a>
                         <button type="reset" class="btn btn-light shadow alt3rem" title="Borrar"><img src="/icon/wind.svg" class="color-light" alt="Borrar"></button>
                         <button type="submit" class="btn btn-light shadow alt3rem" title="Guardar"><img src="/icon/save.svg" class="color-light" alt="Guardar"></button>
                     </div>
