--- a/src/views/admins/newSection.ejs
+++ b/src/views/admins/newSection.ejs
@@ -8,13 +8,13 @@
         <div class="container mt-6">
             <div class="row">
                 <div class="col p-4">
-                    <p class="text-red text-center h1">Superpoderes Web</p>
+                    <p class="text-red text-center h1">Nueva Sección Web</p>
                 </div>
             </div>
 
             <!-- Formulario de Carga -->
             <div class="row m-auto">
-                <form class="d-flex flex-column" action="/super/saveImg" method="POST" enctype="multipart/form-data"> <!-- Cada vez que hagamos un formulario donde el archivo viaje a la ruta que especifiquemos tenemos que agregar: enctype = "multipart/form-data" -->
+                <form class="d-flex flex-column" action="/super/saveSection" method="POST" enctype="multipart/form-data"> <!-- Cada vez que hagamos un formulario donde el archivo viaje a la ruta que especifiquemos tenemos que agregar: enctype = "multipart/form-data" -->
                     <div class="row mb-3 mx-0 input-group">
                         <label class="col-2 col-form-label">ID</label>
                         <div class="col-10 p-0">
@@ -42,7 +42,7 @@
                     <div class="row mb-3 mx-0 input-group">
                         <label class="col-2 col-form-label">Ruta</label>
                         <div class="col-10 p-0">
-                            <input name="routeI" type="text" class="form-control" required>
+                            <input name="routeS" type="text" class="form-control" required>
                         </div>
                     </div>
                     <div class="row mb-3 mx-0 input-group">
@@ -54,9 +54,9 @@
                     
                     
                     <div class="mb-3 btn-group ms-auto">
-                        <a class="btn btn-dark alt3rem" href="/super/table" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="color-light" alt="Volver"></a>
-                        <button type="reset" class="btn btn-dark alt3rem" title="Borrar"><img src="/icon/wind.svg" class="color-light" alt="Borrar"></button>
-                        <button type="submit" class="btn btn-dark alt3rem" title="Guardar"><img src="/icon/save.svg" class="color-light" alt="Guardar"></button>
+                        <a class="btn btn-light shadow alt3rem" href="/super/table" role="button" title="Volver"><img src="/icon/rotate-ccw.svg" class="color-light" alt="Volver"></a>
+                        <button type="reset" class="btn btn-light shadow alt3rem" title="Borrar"><img src="/icon/wind.svg" class="color-light" alt="Borrar"></button>
+                        <button type="submit" class="btn btn-light shadow alt3rem" title="Guardar"><img src="/icon/save.svg" class="color-light" alt="Guardar"></button>
                     </div>
     
                 </form>
