--- a/src/views/admins/superView.ejs
+++ b/src/views/admins/superView.ejs
@@ -18,17 +18,17 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100 border-0">
-                        <img src="./icon/edit.svg" class="card-img-top is-72 mx-auto" alt="...">
+                        <img src="/icon/edit.svg" class="card-img-top is-72 mx-auto" alt="...">
                         <div class="card-body text-center">
-                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/table" role="text">Editar Página Principal</a>
-                            <p class="card-text text-grey">Subir y bajar imágenes de la pantalla principal.</p>
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/table" role="text">Editar Secciones</a>
+                            <p class="card-text text-grey">Crear o eliminar secciones e imágenes de la pantalla principal.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100 border-0">
-                        <img src="./icon/file-text.svg" class="card-img-top is-72 mx-auto" alt="...">
+                        <img src="/icon/file-text.svg" class="card-img-top is-72 mx-auto" alt="...">
                         <div class="card-body text-center">
                             <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/phrases" role="text">Sumar Frases</a>
                             <p class="card-text text-grey">Sumar y borrar frases de la pantalla principal.</p>
@@ -38,7 +38,7 @@
 
                 <div class="col">
                     <div class="card h-100 border-0">
-                        <img src="./icon/archive.svg" class="card-img-top is-72 mx-auto" alt="...">
+                        <img src="/icon/archive.svg" class="card-img-top is-72 mx-auto" alt="...">
                         <div class="card-body text-center">
                             <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/files" role="text">Cargar Archivos</a>
                             <p class="card-text text-grey">Cargar y borrar archivos de la base de datos.</p>
