--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -3,7 +3,7 @@
         <a class="navbar-brand text-black yellowLink mx-3" href="/"><p class="h2">Fernando Fleck</p></a>
         
         <ul class="navbar-nav">
-            <li class="nav-item h5 me-2">
+            <li class="nav-item h5 me-2 d-none">
                 <a class="nav-link text-grey yellowLink" href="/services">Servicios</a>
             </li>
             <li class="nav-item h5 me-2">
