Middleware a nivel aplicación.

--- a/src/views/web/index.ejs
+++ b/src/views/web/index.ejs
@@ -34,7 +34,7 @@
             </div>
 
             <!-- Suscription -->
-            <div class="card bg-dark text-white border-0 rounded-0 m-0 p-0 zi-1000">
+            <div class="card bg-dark text-white border-0 rounded-0 m-0 p-0 zi-1000 d-none">
                 <img src="/images/subscribe.jpg" class="card-img rounded-0" alt="Suscribite">
                 <div class="card-img-overlay ">
                     <div class="h-60">
