--- a/src/views/admins/superView.ejs
+++ b/src/views/admins/superView.ejs
@@ -45,6 +45,16 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <img src="/icon/package.svg" class="card-img-top is-72 mx-auto" alt="...">
+                        <div class="card-body text-center">
+                            <a class="card-title h5 text-decoration-none text-yellow redLink" href="/super/newContent" role="text">Crear Contenidos</a>
+                            <p class="card-text text-grey">Crear o eliminar contenidos de las secciones.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Fin Container -->
